infrastructure/controllers/vault/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-route
  namespace: kube-system
spec:
  parentRefs:
  - name: gateway
    namespace: default
  hostnames:
    - vault.internal.zinkithink.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: vault-ui
      port: 8200
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-redirect
  namespace: kube-system
spec:
  parentRefs:
  - name: gateway
    sectionName: http
    namespace: default
  hostnames:
  - vault.internal.zinkithink.com
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
